spacing fixes

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -103,9 +103,9 @@
   padding-bottom: 5rem;
 }
 
-.pb5 { padding-bottom: 5px; }
+.pb5 { padding-bottom: 5rem; }
 
-.pt5 { padding-top: 5px; }
+.pt5 { padding-top: 5rem; }
 
 .px5 {
   padding-left: 5rem;
